# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  added xft to IUSE

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removed order or DEPEND and RDEPEND, so values are correctly inserted

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  correct value of SLOT

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  metadata.xml added; keywords reverted to ~x86 only

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/digest-emacs-cvs-22.0.95-r2, +files/digest-emacs-cvs-22.0.9999-r6,
  +files/digest-emacs-cvs-23.0.0-r2, +Manifest:
  adding Manifest and digests, so users can really use it

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  correct Header

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/emacs-cvs-21.3.50-nofink.diff, +emacs-cvs-22.0.95-r2.ebuild,
  +emacs-cvs-22.0.9999-r6.ebuild, +emacs-cvs-23.0.0-r2.ebuild,
  +files/emacs-cvs-disable_alsa_detection.patch,
  +files/emacs-cvs-freebsd-sparc.patch:
  adding first revisions: sound USE flag, also activated when USE=alsa is
  alone; nls, gnome USE flags not necessary; alsa autodetection only activated
  when USE=alsa; Most things put in RDEPEND, as spell USE flag; removed
  symlink handling for binaries and man pages, all handled by eselect module
  (new dependency); removed env.d file, handled by eselect module
