@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.95.tar.gz 37754533 RMD160 e5aa6001a255538dbc8fb2d548d1b67979f94033 SHA1 90cd5a6078d26b3bd0eb4f2da0561df759bc880f SHA256 5e25e8f221fe18f07feadd831bb482e6cde53c9470713c63f059ff2d3e715b1d
-EBUILD emacs-cvs-22.0.95-r2.ebuild 7293 RMD160 3e10a336c818bdcde82193e05a03a35a349f71b4 SHA1 9710e707e59c296414843cf50718ab6866de3901 SHA256 7bfc33bbbdb6af9fd496fe4394da2c23427126122d14611c4a655eb9bc3c6890
-MD5 a4651f823d8ace9ab3d94f25d36bac47 emacs-cvs-22.0.95-r2.ebuild 7293
-RMD160 3e10a336c818bdcde82193e05a03a35a349f71b4 emacs-cvs-22.0.95-r2.ebuild 7293
-SHA256 7bfc33bbbdb6af9fd496fe4394da2c23427126122d14611c4a655eb9bc3c6890 emacs-cvs-22.0.95-r2.ebuild 7293
-EBUILD emacs-cvs-22.0.9999-r6.ebuild 7307 RMD160 2ac9f466338ff09bb43fd7828b2f6785044d63fd SHA1 90197c25ab96e0d9c33cb49f88a35612b316046d SHA256 75dafe55be4d470a3f4197c392c2d24869804d8afed582639ee73c65025f48e1
-MD5 59a7c52897b176a104bc5d483c5abe74 emacs-cvs-22.0.9999-r6.ebuild 7307
-RMD160 2ac9f466338ff09bb43fd7828b2f6785044d63fd emacs-cvs-22.0.9999-r6.ebuild 7307
-SHA256 75dafe55be4d470a3f4197c392c2d24869804d8afed582639ee73c65025f48e1 emacs-cvs-22.0.9999-r6.ebuild 7307
-EBUILD emacs-cvs-23.0.0-r2.ebuild 7522 RMD160 2fff570fd4b62131d47e3388c5e590083244d338 SHA1 8616f4302f77849976a9fc151b1d7a3655aa4bc2 SHA256 d137b836d8fafdc8aa298dbaa1b1b95041faeeaf50471a834f0c941e1e9dc4b6
-MD5 314bd487fda9bf24d332787d3a91c875 emacs-cvs-23.0.0-r2.ebuild 7522
-RMD160 2fff570fd4b62131d47e3388c5e590083244d338 emacs-cvs-23.0.0-r2.ebuild 7522
-SHA256 d137b836d8fafdc8aa298dbaa1b1b95041faeeaf50471a834f0c941e1e9dc4b6 emacs-cvs-23.0.0-r2.ebuild 7522
-MISC ChangeLog 1727 RMD160 dafce3e56a8d2491ef4c214869cd0bb30c621ce9 SHA1 809d0a6b58996b130ca88f53de01af876698c502 SHA256 5d1617642b1b0250856594e54f9f4300985a01755e39728605727bd73d9ab632
-MD5 955a44a7f8905539205b656244d78e09 ChangeLog 1727
-RMD160 dafce3e56a8d2491ef4c214869cd0bb30c621ce9 ChangeLog 1727
-SHA256 5d1617642b1b0250856594e54f9f4300985a01755e39728605727bd73d9ab632 ChangeLog 1727
+EBUILD emacs-cvs-22.0.95-r2.ebuild 7293 RMD160 65e904765068817281a12c9af3b25301c7bf9b67 SHA1 f043898dfe9bc36526ce0f8fdfbc3a68d35242ab SHA256 6a3bfec04d349d0a363316e4c66e107470bc0a759b4c77b91eeaf23500e7a8fd
+MD5 22dd836276d7a63c68404c0247771045 emacs-cvs-22.0.95-r2.ebuild 7293
+RMD160 65e904765068817281a12c9af3b25301c7bf9b67 emacs-cvs-22.0.95-r2.ebuild 7293
+SHA256 6a3bfec04d349d0a363316e4c66e107470bc0a759b4c77b91eeaf23500e7a8fd emacs-cvs-22.0.95-r2.ebuild 7293
+EBUILD emacs-cvs-22.0.9999-r6.ebuild 7307 RMD160 678ce0bc7ceda8d91ce7681c3dc4ec31af4ff8d6 SHA1 9cbc35e70aaacd98ece67ce89e49f591a1277c70 SHA256 4f90181b353eb7c0e06f150f651b3301c9e14892612656a261c2def97d6086ed
+MD5 454c4d302d8e75c792c530dc2ac6f0fb emacs-cvs-22.0.9999-r6.ebuild 7307
+RMD160 678ce0bc7ceda8d91ce7681c3dc4ec31af4ff8d6 emacs-cvs-22.0.9999-r6.ebuild 7307
+SHA256 4f90181b353eb7c0e06f150f651b3301c9e14892612656a261c2def97d6086ed emacs-cvs-22.0.9999-r6.ebuild 7307
+EBUILD emacs-cvs-23.0.0-r2.ebuild 7522 RMD160 9f25ef922ab069f41e3469d1587bf763a251efc7 SHA1 8cafad7547bed39c7065e8673e18da81e8e974dd SHA256 bbaa790d7c19f67a58ae3b7b20cfd0f4bf1896e820c862352bf43fcc9d6867f9
+MD5 fd4df859295a7ee00a682e77ca1527bd emacs-cvs-23.0.0-r2.ebuild 7522
+RMD160 9f25ef922ab069f41e3469d1587bf763a251efc7 emacs-cvs-23.0.0-r2.ebuild 7522
+SHA256 bbaa790d7c19f67a58ae3b7b20cfd0f4bf1896e820c862352bf43fcc9d6867f9 emacs-cvs-23.0.0-r2.ebuild 7522
+MISC ChangeLog 1902 RMD160 5394f785122abb55b06b26bc4afe0ddb6248e50e SHA1 5ada69ac76f1546152e7f342399c20d522896322 SHA256 792e8ada5a70381ba3d050393c6e0a48441b99f6850e38205fde24ae25864327
+MD5 69a87de844299722d5a63cd601bdc363 ChangeLog 1902
+RMD160 5394f785122abb55b06b26bc4afe0ddb6248e50e ChangeLog 1902
+SHA256 792e8ada5a70381ba3d050393c6e0a48441b99f6850e38205fde24ae25864327 ChangeLog 1902
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
