@@ -3,6 +3,11 @@
 # $Header: $
 
   16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
+  emacs-cvs-23.0.0-r2.ebuild:
+  finally fix eselect call
+
+  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-cvs-23.0.0-r2.ebuild:
   added xft to IUSE
 
